add concurrent gc as default jvm option